Add MacOS WebView and building